# marco-chrissy-site

./: .gitignore  README.md  debug_profiler.py  defaults.py  pyproject.toml
cli/: __init__.py  main.py
cli/commands/: benchmark.py  build.py  deploy.py  organize.py  purge.py  serve.py  validate.py
config/: deploy.json  galleria.json  normpic.json  pelican.json  site.json
config/schema/: galleria.json  normpic.json  pelican.json  site.json
content/: index.md
content/page/: about.md
deploy/: __init__.py  bunny_cdn_client.py  bunnynet_client.py  manifest_comparator.py  orchestrator.py
doc/: CHANGELOG.md  CONTRIBUTE.md  HANDOFF.md  PLANNING.md  README.md  TODO.md  architecture.md  bconfiguration.md  bunnynet.md  configuration.md  provider-architecture.md  testing.md  workflow.md
doc/benchmark/: README.md  baseline.md  pagination.md  quality-analysis.md
doc/commands/: README.md  benchmark.md  build.md  deploy.md  development.md  galleria.md  organize.md  pipeline.md  purge.md  serve.md  validate.md
doc/future/: README.md  architecture-decisions.md  galleria-extraction.md  generalization.md
doc/modules/: README.md  galleria-structure.md  patterns.md  serializer.md  site-structure.md  validator.md
doc/release/: 0-1.md  0-2.md  README.md
galleria/: README.md  __main__.py  benchmark.py  config.py
galleria/doc/: README.md  TODO.md  architecture.md
galleria/generator/: __init__.py
galleria/manager/: __init__.py  hooks.py  pipeline.py
galleria/orchestrator/: __init__.py  serve.py
galleria/plugins/: __init__.py  base.py  css.py  exceptions.py  interfaces.py  pagination.py  registry.py  template.py
galleria/processor/: __init__.py  image.py
galleria/serializer/: __init__.py  exceptions.py  loader.py  models.py
galleria/server/: __init__.py
galleria/template/: __init__.py  filters.py
galleria/theme/: __init__.py  loader.py  validator.py
galleria/themes/: __init__.py
galleria/util/: __init__.py  watcher.py
organizer/: __init__.py  normpic.py
scripts/: benchmark_parallel.py  benchmark_quality.py  bump_version.py
serializer/: __init__.py  exceptions.py  json.py
serve/: __init__.py  orchestrator.py  proxy.py
test/: __init__.py  conftest.py
test/e2e/: __init__.py  test_benchmark_command.py  test_config_integration.py  test_parallel_thumbnails.py  test_responsive_layout.py  (+10 more)
themes/: __init__.py
validator/: __init__.py  config.py  dependencies.py  permissions.py
(+156 files in other folders)
